--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,8 +26,10 @@
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.3",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^2.3.0",
     "typescript": "^3.8.3",
