--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3.2'
 services:
-
+  
   mongo:
     image: mongo:latest
     ports:
       - "27017:27017"
+
+  frontend:
+    build: ./Frontend
+    tty: true
+    volumes:
+      - './Frontend:/usr/src/app'
+    links:
+      - loadbalancer
+    command: ["npm", "run", "start"]
+    ports:
+      - '3000:3000'
 
   backend1:
     build: ./Backend
