--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.7",
