fix session login

--- a/load-balancer/nginx.conf
+++ b/load-balancer/nginx.conf
@@ -13,8 +13,20 @@ http {
     listen 8080;
     server_name localhost;
     location / {
-       proxy_pass http://localhost;
-       proxy_set_header Host $host;
+         proxy_pass http://localhost;
+         proxy_set_header Host $host;
+         # THESE ARE IMPORTANT
+         proxy_set_header X-Real-IP $remote_addr;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         # This is what tells Connect that your session can be considered secure, 
+         # even though the protocol node.js sees is only HTTP:        
+         proxy_set_header X-Forwarded-Proto $scheme; 
+         proxy_set_header Host $http_host;
+         proxy_set_header X-NginX-Proxy true;
+         proxy_read_timeout 5m;
+         proxy_connect_timeout 5m;
+         proxy_pass http://nodeserver;
+         proxy_redirect off;
     }
   }
 }
