--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,8 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
+    "connect-mongodb-session": "^2.3.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
