--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon",
-    "format": "eslint --fix \"**/*.ts\""
+    "dev": "nodemon --experimental-modules",
+    "format": "eslint --fix \"**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -35,14 +35,11 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "socket.io": "^2.3.0",
-    "typescript": "^3.8.3",
     "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4"
   }
 }
